[package]
name = "subtrack"
description = "Seamlessly add subtitles to a video file!"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive"] }
console = "0.15.11"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
indicatif = "0.17.11"

[dev-dependencies]
tempfile = "3.17.1"
